# IEC61850-Gateway

./: README.md  build_ied_simulators.sh  build_windows_on_windows.bat  installer_windows.iss  setup_dependencies.sh  start_ied_simulator.sh
.github/workflows/: main.yml
iec61850-opcua-gateway/: BUILD.md  CMakeLists.txt
iec61850-opcua-gateway/.github/workflows/: release.yml
iec61850-opcua-gateway/build-windows/: CMakeCache.txt
iec61850-opcua-gateway/cmake/: CompilerOptions.cmake  FindLibIEC61850.cmake  Toolchain-linux-aarch64.cmake  Toolchain-mingw-w64.cmake
iec61850-opcua-gateway/config/: SCD_TEST_README.md  prp_2redbox_60ieds.scd  station.scd
iec61850-opcua-gateway/include/gateway/: gateway_api.h
iec61850-opcua-gateway/release/gateway-dev-macos/: README.md  iec61850-opcua-gateway
iec61850-opcua-gateway/release/gateway-dev-macos/config/: gateway.yaml  hsr_6ieds.scd  prp_10ieds.scd  prp_4ieds.scd
iec61850-opcua-gateway/release/gateway-dev-macos/config/icd/: TestIED_BasicIO.icd
iec61850-opcua-gateway/release/gateway-dev-macos/www/css/: style.css
iec61850-opcua-gateway/release/gateway-dev-macos/www/js/: app.js  goose-monitor.js  mms-test.js  topology-api.js
iec61850-opcua-gateway/scripts/: build-linux-arm64.sh  build-linux-x86.sh  build-macos-arm64.sh  build-release.sh  build-windows.sh  package.sh
iec61850-opcua-gateway/src/: main.cpp
iec61850-opcua-gateway/src/alarm/: alarm_manager.cpp  alarm_manager.h
iec61850-opcua-gateway/src/api/: rest_api.cpp  rest_api.h  topology_parser.cpp  topology_parser.h
iec61850-opcua-gateway/src/core/: application.cpp  application.h  config_parser.cpp  config_parser.h  logger.cpp  logger.h  service_manager.cpp  service_manager.h  thread_pool.cpp  thread_pool.h
iec61850-opcua-gateway/src/data/models/: ied_device.cpp  ied_device.h
iec61850-opcua-gateway/src/iec61850/goose/: goose_receiver.cpp  goose_receiver.h  goose_subscriber_manager.cpp  goose_subscriber_manager.h
iec61850-opcua-gateway/src/iec61850/mms/: mms_connection.cpp  mms_connection.h  mms_connection_manager.cpp  mms_connection_manager.h
iec61850-opcua-gateway/src/iec61850/scl/: ied_model_builder.cpp  ied_model_builder.h  scd_generator.cpp  scd_generator.h  scl_generator.cpp  scl_generator.h  scl_parser.cpp  scl_parser.h
iec61850-opcua-gateway/src/iec61850/sv/: sv_waveform_capture.cpp  sv_waveform_capture.h
iec61850-opcua-gateway/src/opcua/: data_binder.cpp  data_binder.h  opcua_server.cpp  opcua_server.h
iec61850-opcua-gateway/src/opcua/namespace/: namespace_builder.cpp  namespace_builder.h
iec61850-opcua-gateway/src/opcua/subscription/: subscription_manager.cpp  subscription_manager.h
iec61850-opcua-gateway/src/storage/: influx_writer.cpp  influx_writer.h  storage_writer.h  timescale_writer.cpp  timescale_writer.h
iec61850-opcua-gateway/tests/: CMakeLists.txt  test_scd_generator.cpp  test_scl_parser.cpp  test_sv_capture.cpp
iec61850-opcua-gateway/www/: index.html
iec61850-opcua-gateway/www/css/: goose-monitor.css  mms-test.css  pages.css  settings.css
iec61850-opcua-gateway/www/js/: i18n.js
ied_simulators_binaries/: IED_Simulator_macos_arm64.dmg  IED_Simulator_macos_x86_64.dmg
ied_simulators_binaries/macos_arm64/: README.txt  server_example_61400_25  server_example_config_file  (+6 more)
(+27 files in other folders)
